--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,168 @@
-hello world!
+<!DOCTYPE html>
+<html lang="en-gb">
+  <head>
+    <meta charset="utf-8" />
+    <title>Measured Co.</title>
+    <meta name="description" content="Design system products and services." />
+    <link rel="icon" href="favicon.png" type="image/png" />
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <style>
+      :root {
+        --color-azure-0: #00175d;
+        --color-azure-1: #002c77;
+        --color-azure-2: #014292;
+        --color-azure-3: #0158ad;
+        --color-azure-4: #3479be;
+        --color-azure-5: #6499cf;
+        --color-azure-6: #88b0da;
+        --color-azure-7: #abc7e5;
+        --color-azure-8: #cfdff0;
+        --color-azure-9: #f3f6fb;
+
+        --color-rose-0: #4a001c;
+        --color-rose-1: #670833;
+        --color-rose-2: #87114c;
+        --color-rose-3: #a81a66;
+        --color-rose-4: #bc5089;
+        --color-rose-5: #cc7ca5;
+        --color-rose-6: #d89aba;
+        --color-rose-7: #e3b8cf;
+        --color-rose-8: #efd6e3;
+        --color-rose-9: #faf4f8;
+
+        --color-grey-0: #111111;
+        --color-grey-1: #282828;
+        --color-grey-2: #404040;
+        --color-grey-3: #5a5a5a;
+        --color-grey-4: #767676;
+        --color-grey-5: #949494;
+        --color-grey-6: #ababab;
+        --color-grey-7: #c3c3c3;
+        --color-grey-8: #dcdcdc;
+        --color-grey-9: #f5f5f5;
+      }
+
+      @font-face {
+        font-family: "Inter";
+        font-weight: 100 900;
+        font-display: swap;
+        font-style: oblique 0deg 10deg;
+        src: url("Inter.var.woff2?v=3.13") format("woff2");
+      }
+
+      html,
+      body {
+        height: 100%;
+      }
+
+      .msrd {
+        background-color: white;
+        color: black;
+        display: flex;
+        flex-direction: column;
+        font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
+          Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+          Segoe UI Symbol;
+        height: calc(100% - 3rem);
+        justify-content: center;
+        line-height: 1.5;
+        padding: 1.5rem 1rem;
+        text-align: center;
+      }
+
+      .msrd a {
+        color: #0158ad;
+        color: var(--color-azure-3);
+        text-decoration: none;
+      }
+
+      .msrd a:visited {
+        color: var(--color-rose-3);
+      }
+
+      .msrd a:hover {
+        color: var(--color-azure-2);
+        text-decoration: underline;
+      }
+
+      .msrd a:focus {
+        color: var(--color-azure-2);
+        text-decoration: none;
+      }
+
+      .msrd a:active {
+        color: var(--color-azure-1);
+        text-decoration: none;
+      }
+
+      .msrd h1 {
+        font-feature-settings: "cpsp", "cv06", "cv11";
+        font-size: clamp(1rem, 13.125vw, 6rem);
+        font-variation-settings: "wght" 525;
+        font-weight: 500;
+        letter-spacing: -0.022em;
+        line-height: 1;
+        margin-bottom: 0;
+        margin-top: 0;
+        white-space: nowrap;
+      }
+
+      .msrd p {
+        font-size: clamp(1rem, 6.5625vw, 1.75rem);
+        font-variation-settings: "wght" 325;
+        font-weight: 300;
+        letter-spacing: -0.0195em;
+        line-height: 1.285714286;
+        margin-bottom: 0;
+        margin-top: 0;
+      }
+
+      .msrd .u-mailto {
+        font-style: italic;
+        font-variation-settings: "wght" 325, "slnt" -2.5;
+        white-space: nowrap;
+      }
+
+      .msrd .u-spacing {
+        margin-bottom: clamp(0.75rem, 3.75vw, 1.5rem);
+      }
+
+      @media (prefers-color-scheme: dark) {
+        .msrd {
+          color: white;
+          background-color: var(--color-grey-0);
+        }
+
+        .msrd a {
+          color: var(--color-azure-5);
+        }
+
+        .msrd a:visited {
+          color: var(--color-rose-3);
+        }
+
+        .msrd a:hover,
+        .msrd a:focus {
+          color: var(--color-azure-6);
+        }
+
+        .msrd a:active {
+          color: var(--color-azure-7);
+        }
+      }
+    </style>
+  </head>
+  <body style="margin: 0;">
+    <main class="msrd">
+      <h1>Measured Co.</h1>
+      <div class="u-spacing"></div>
+      <p>Design system products and&nbsp;services.</p>
+      <div class="u-spacing"></div>
+      <p>
+        <a class="u-mailto" href="mailto:hello@measured.co">
+          hello@measured.co
+        </a>
+      </p>
+    </main>
+  </body>
+</html>
