feat: increase h1 font weight and left align content

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
       }
 
       .msrd {
+        align-items: center;
         background-color: white;
         color: black;
         display: flex;
@@ -67,7 +68,6 @@
         justify-content: center;
         line-height: 1.5;
         padding: 1.5rem 1rem;
-        text-align: center;
       }
 
       .msrd a {
@@ -98,8 +98,8 @@
       .msrd h1 {
         font-feature-settings: "cpsp", "cv06", "cv11";
         font-size: clamp(1rem, 13.125vw, 6rem);
-        font-variation-settings: "wght" 525;
-        font-weight: 500;
+        font-variation-settings: "wght" 725;
+        font-weight: 700;
         letter-spacing: -0.022em;
         line-height: 1;
         margin-bottom: 0;
@@ -118,8 +118,7 @@
       }
 
       .msrd .u-mailto {
-        font-style: italic;
-        font-variation-settings: "wght" 325, "slnt" -2.5;
+        font-variation-settings: "wght" 325;
         white-space: nowrap;
       }
 
@@ -154,15 +153,17 @@
   </head>
   <body style="margin: 0;">
     <main class="msrd">
-      <h1>Measured Co.</h1>
-      <div class="u-spacing"></div>
-      <p>Design system products and&nbsp;services.</p>
-      <div class="u-spacing"></div>
-      <p>
-        <a class="u-mailto" href="mailto:hello@measured.co">
-          hello@measured.co
-        </a>
-      </p>
+      <section>
+        <h1>Measured Co.</h1>
+        <div class="u-spacing"></div>
+        <p>Design system products and&nbsp;services.</p>
+        <div class="u-spacing"></div>
+        <p>
+          <a class="u-mailto" href="mailto:hello@measured.co">
+            hello@measured.co
+          </a>
+        </p>
+      </section>
     </main>
   </body>
 </html>
