--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,15 @@
       body {
         height: 100%;
       }
+      
+      .bar {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        height: 0.375rem;
+        background: var(--color-rose-3);
+      }
 
       .msrd {
         align-items: center;
@@ -102,6 +111,10 @@
         justify-content: center;
         line-height: 1.5;
         padding: 1.5rem 1rem;
+      }
+      
+      .msrd section {
+        max-width: 56rem;
       }
 
       .msrd a {
@@ -130,15 +143,13 @@
       }
 
       .msrd h1 {
-        font-feature-settings: "cpsp", "cv06", "cv11";
-        font-size: clamp(1rem, 13.125vw, 6rem);
+        font-size: clamp(1rem, 13.125vw, 4.5625rem);
         font-variation-settings: "wght" 725;
         font-weight: 700;
         letter-spacing: -0.022em;
-        line-height: 1;
+        line-height: 1.285714286;
         margin-bottom: 0;
         margin-top: 0;
-        white-space: nowrap;
       }
 
       .msrd p {
@@ -186,11 +197,13 @@
     </style>
   </head>
   <body style="margin: 0;">
+    <div class="bar"></div>
+
     <main class="msrd">
       <section>
-        <h1>Measured Co.</h1>
+        <h1>We turn brands into Design Systems</h1>
         <div class="u-spacing"></div>
-        <p>Design system products and&nbsp;services.</p>
+        <!--         <p>Design system products and&nbsp;services.</p> -->
         <div class="u-spacing"></div>
         <p>
           <a class="u-mailto" href="mailto:hello@measured.co">
