feat: add UI color tokens
* Update index.html

* Update index.html

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,39 @@
         --color-rose-7: #e3b8cf;
         --color-rose-8: #efd6e3;
         --color-rose-9: #faf4f8;
+        
+        --color-green-0: #002000;
+        --color-green-1: #043604;
+        --color-green-2: #084e08;
+        --color-green-3: #0c680c;
+        --color-green-4: #1d882f;
+        --color-green-5: #2faa53;
+        --color-green-6: #56c16f;
+        --color-green-7: #7dd78b;
+        --color-green-8: #b8e8bf;
+        --color-green-9: #eff8f0;
+
+        --color-yellow-0: #211000;
+        --color-yellow-1: #362700;
+        --color-yellow-2: #4c4000;
+        --color-yellow-3: #645a00;
+        --color-yellow-4: #877614;
+        --color-yellow-5: #ab9429;
+        --color-yellow-6: #bfac4e;
+        --color-yellow-7: #d4c474;
+        --color-yellow-8: #e6deb1;
+        --color-yellow-9: #f9f7ed;
+
+        --color-red-0: #4c0000;
+        --color-red-1: #6a0a10;
+        --color-red-2: #8a1422;
+        --color-red-3: #ac1f35;
+        --color-red-4: #bf5366;
+        --color-red-5: #ce7e8e;
+        --color-red-6: #d99ca8;
+        --color-red-7: #e4b9c2;
+        --color-red-8: #efd7db;
+        --color-red-9: #faf4f5;
 
         --color-grey-0: #111111;
         --color-grey-1: #282828;
