--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,22 @@
         background: var(--color-rose-3);
       }
 
+      .logo {
+        font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
+          Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+          Segoe UI Symbol;
+        font-feature-settings: "cpsp", "cv06", "cv11";
+        font-size: 1.75rem;
+        font-variation-settings: "wght" 725;
+        font-weight: 700;
+        left: 0;
+        letter-spacing: -0.022em;
+        padding: 1.125rem 1rem 1.5rem;
+        position: fixed;
+        top: 0;
+        white-space: nowrap;
+      }
+
       .msrd {
         align-items: center;
         background-color: white;
@@ -198,6 +214,10 @@
   </head>
   <body style="margin: 0;">
     <div class="bar"></div>
+
+    <header>
+      <span class="logo">Measured Co.</span>
+    </header>
 
     <main class="msrd">
       <section>
