--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Measured Co.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Design system products and services." />
     <link rel="icon" href="favicon.png" type="image/png" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
