--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,17 @@
         height: 100%;
       }
 
-      .bar {
+      .msrd {
+        background-color: white;
+        color: black;
+        font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
+          Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+          Segoe UI Symbol;
+        line-height: 1.5;
+        margin: 0;
+      }
+
+      .msrd .bar {
         position: fixed;
         top: 0;
         right: 0;
@@ -98,10 +108,7 @@
         background: var(--color-rose-3);
       }
 
-      .logo {
-        font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
-          Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
-          Segoe UI Symbol;
+      .msrd .logo {
         font-feature-settings: "cpsp", "cv06", "cv11";
         font-size: 1.75rem;
         font-variation-settings: "wght" 725;
@@ -114,15 +121,10 @@
         white-space: nowrap;
       }
 
-      .msrd {
+      .msrd main {
         align-items: center;
-        background-color: white;
-        color: black;
         display: flex;
         flex-direction: column;
-        font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
-          Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
-          Segoe UI Symbol;
         height: calc(100% - 3rem);
         justify-content: center;
         line-height: 1.5;
@@ -212,14 +214,14 @@
       }
     </style>
   </head>
-  <body style="margin: 0;">
+  <body class="msrd">
     <div class="bar"></div>
 
     <header>
       <span class="logo">Measured Co.</span>
     </header>
 
-    <main class="msrd">
+    <main>
       <section>
         <h1>We turn brands into Design Systems</h1>
         <div class="u-spacing"></div>
