--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,8 @@
       .msrd {
         background-color: white;
         color: black;
+        display: flex;
+        flex-direction: column;
         font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
           Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
           Segoe UI Symbol;
@@ -99,11 +101,14 @@
         margin: 0;
       }
 
-      .msrd .bar {
-        position: fixed;
+      .msrd header {
+        position: absolute;
+        left: 0;
         top: 0;
         right: 0;
-        left: 0;
+      }
+
+      .msrd .bar {
         height: 0.375rem;
         background: var(--color-rose-3);
       }
@@ -115,9 +120,7 @@
         font-weight: 700;
         left: 0;
         letter-spacing: -0.022em;
-        padding: 1.125rem 1rem 1.5rem;
-        position: fixed;
-        top: 0;
+        padding: 0.75rem 1.125rem;
         white-space: nowrap;
       }
 
@@ -125,10 +128,10 @@
         align-items: center;
         display: flex;
         flex-direction: column;
-        height: calc(100% - 3rem);
+        height: 100%;
         justify-content: center;
         line-height: 1.5;
-        padding: 1.5rem 1rem;
+        padding: 4.5rem 1rem;
       }
 
       .msrd section {
@@ -167,7 +170,7 @@
         letter-spacing: -0.022em;
         line-height: 1.150684932;
         margin-bottom: 0;
-        margin-top: 0;
+        margin-top: 0px;
       }
 
       .msrd p {
@@ -215,10 +218,9 @@
     </style>
   </head>
   <body class="msrd">
-    <div class="bar"></div>
-
     <header>
-      <span class="logo">Measured Co.</span>
+      <div class="bar"></div>
+      <div class="logo">Measured Co.</div>
     </header>
 
     <main>
