--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,7 @@
         margin-top: 0;
       }
 
-      .msrd .u-mailto {
+      .msrd .mailto {
         font-variation-settings: "wght" 325;
         white-space: nowrap;
       }
@@ -239,7 +239,7 @@
           <h1>We turn brands into Design Systems</h1>
           <div class="u-spacing"></div>
           <p>
-            <a class="u-mailto" href="mailto:hello@measured.co">
+            <a class="mailto" href="mailto:hello@measured.co">
               hello@measured.co
             </a>
           </p>
