feat: change strapline to sentence case

--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
 
       <main>
         <section>
-          <h1>We turn brands into Design Systems.</h1>
+          <h1>We turn brands into design systems.</h1>
           <div class="u-spacing"></div>
           <p>
             <a class="mailto" href="mailto:hello@measured.co">
