--- a/src/index.html
+++ b/src/index.html
@@ -10,103 +10,40 @@
     <meta name="description" content="We turn brands into Design Systems." />
     <link rel="icon" href="favicon.png" type="image/png" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="system.css" />
     <style>
-      :root {
-        --color-azure-0: #00175d;
-        --color-azure-1: #002c77;
-        --color-azure-2: #014292;
-        --color-azure-3: #0158ad;
-        --color-azure-4: #3479be;
-        --color-azure-5: #6499cf;
-        --color-azure-6: #88b0da;
-        --color-azure-7: #abc7e5;
-        --color-azure-8: #cfdff0;
-        --color-azure-9: #f3f6fb;
-
-        --color-rose-0: #4a001c;
-        --color-rose-1: #670833;
-        --color-rose-2: #87114c;
-        --color-rose-3: #a81a66;
-        --color-rose-4: #bc5089;
-        --color-rose-5: #cc7ca5;
-        --color-rose-6: #d89aba;
-        --color-rose-7: #e3b8cf;
-        --color-rose-8: #efd6e3;
-        --color-rose-9: #faf4f8;
-
-        --color-green-0: #002000;
-        --color-green-1: #043604;
-        --color-green-2: #084e08;
-        --color-green-3: #0c680c;
-        --color-green-4: #1d882f;
-        --color-green-5: #2faa53;
-        --color-green-6: #56c16f;
-        --color-green-7: #7dd78b;
-        --color-green-8: #b8e8bf;
-        --color-green-9: #eff8f0;
-
-        --color-yellow-0: #211000;
-        --color-yellow-1: #362700;
-        --color-yellow-2: #4c4000;
-        --color-yellow-3: #645a00;
-        --color-yellow-4: #877614;
-        --color-yellow-5: #ab9429;
-        --color-yellow-6: #bfac4e;
-        --color-yellow-7: #d4c474;
-        --color-yellow-8: #e6deb1;
-        --color-yellow-9: #f9f7ed;
-
-        --color-red-0: #4c0000;
-        --color-red-1: #6a0a10;
-        --color-red-2: #8a1422;
-        --color-red-3: #ac1f35;
-        --color-red-4: #bf5366;
-        --color-red-5: #ce7e8e;
-        --color-red-6: #d99ca8;
-        --color-red-7: #e4b9c2;
-        --color-red-8: #efd7db;
-        --color-red-9: #faf4f5;
-
-        --color-grey-0: #111111;
-        --color-grey-1: #282828;
-        --color-grey-2: #404040;
-        --color-grey-3: #5a5a5a;
-        --color-grey-4: #767676;
-        --color-grey-5: #949494;
-        --color-grey-6: #ababab;
-        --color-grey-7: #c3c3c3;
-        --color-grey-8: #dcdcdc;
-        --color-grey-9: #f5f5f5;
-      }
-
-      @font-face {
-        font-family: "Inter";
-        font-weight: 100 900;
-        font-display: swap;
-        font-style: oblique 0deg 10deg;
-        src: url("Inter.var.woff2?v=3.13") format("woff2");
-      }
+      /*
+       * Page styles
+       */
 
       html,
       body {
-        background-color: var(--color-rose-3);
         height: 100%;
+      }
+
+      body {
+        background-color: var(--color-brand);
         margin: 0;
       }
 
-      .msrd {
-        background-color: white;
-        color: black;
+      .wrapper {
+        background-color: var(--color-background);
         display: flex;
         flex-direction: column;
-        font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
-          Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
-          Segoe UI Symbol;
         height: 100%;
-        line-height: 1.5;
         padding: env(safe-area-inset-top) env(safe-area-inset-right)
           env(safe-area-inset-bottom) env(safe-area-inset-left);
       }
+
+      @media (prefers-color-scheme: dark) {
+        .wrapper {
+          background-color: var(--color-background-inverted);
+        }
+      }
+
+      /*
+       * System styles
+       */
 
       .msrd header {
         position: absolute;
@@ -116,7 +53,7 @@
       }
 
       .msrd .bar {
-        background-color: var(--color-rose-3);
+        background: var(--color-brand);
         height: 0.375rem;
       }
 
@@ -140,37 +77,11 @@
         flex-grow: 1;
         flex-shrink: 0;
         justify-content: center;
-        line-height: 1.5;
         padding: 4.5rem 1rem;
       }
 
       .msrd section {
         max-width: 43rem;
-      }
-
-      .msrd a {
-        color: #0158ad;
-        color: var(--color-azure-3);
-        text-decoration: none;
-      }
-
-      .msrd a:visited {
-        color: var(--color-rose-3);
-      }
-
-      .msrd a:hover {
-        color: var(--color-azure-2);
-        text-decoration: underline;
-      }
-
-      .msrd a:focus {
-        color: var(--color-azure-2);
-        text-decoration: none;
-      }
-
-      .msrd a:active {
-        color: var(--color-azure-1);
-        text-decoration: none;
       }
 
       .msrd h1 {
@@ -201,39 +112,14 @@
       .msrd .u-spacing {
         margin-bottom: clamp(0.75rem, 3.75vw, 1.5rem);
       }
-
-      @media (prefers-color-scheme: dark) {
-        .msrd {
-          background-color: var(--color-grey-0);
-          color: white;
-        }
-
-        .msrd a {
-          color: var(--color-azure-5);
-        }
-
-        .msrd a:visited {
-          color: var(--color-rose-3);
-        }
-
-        .msrd a:hover,
-        .msrd a:focus {
-          color: var(--color-azure-6);
-        }
-
-        .msrd a:active {
-          color: var(--color-azure-7);
-        }
-      }
     </style>
   </head>
   <body>
-    <div class="msrd">
+    <div class="wrapper msrd">
       <header>
         <div class="bar"></div>
         <div class="logo">Measured Co.</div>
       </header>
-
       <main>
         <section>
           <h1>We turn brands into design systems.</h1>
