fix: fix safari behaviour on small screens

--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,8 @@
         align-items: center;
         display: flex;
         flex-direction: column;
-        height: 100%;
+        flex-grow: 1;
+        flex-shrink: 0;
         justify-content: center;
         line-height: 1.5;
         padding: 4.5rem 1rem;
