--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,7 @@
 
       html,
       body {
+        background-color: var(--color-rose-3);
         height: 100%;
       }
 
@@ -102,6 +103,7 @@
       }
 
       .msrd header {
+        background-color: white;
         position: absolute;
         left: 0;
         top: 0;
@@ -109,7 +111,7 @@
       }
 
       .msrd .bar {
-        background: var(--color-rose-3);
+        background-color: var(--color-rose-3);
         height: 0.375rem;
       }
 
@@ -126,6 +128,7 @@
 
       .msrd main {
         align-items: center;
+        background-color: white;
         display: flex;
         flex-direction: column;
         flex-grow: 1;
