--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Measured Co.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <meta name="description" content="We turn brands into Design Systems." />
     <link rel="icon" href="favicon.png" type="image/png" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
@@ -88,6 +91,7 @@
       body {
         background-color: var(--color-rose-3);
         height: 100%;
+        margin: 0;
       }
 
       .msrd {
@@ -98,12 +102,13 @@
         font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
           Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
           Segoe UI Symbol;
+        height: 100%;
         line-height: 1.5;
-        margin: 0;
+        padding: env(safe-area-inset-top) env(safe-area-inset-right)
+          env(safe-area-inset-bottom) env(safe-area-inset-left);
       }
 
       .msrd header {
-        background-color: white;
         position: absolute;
         left: 0;
         top: 0;
@@ -122,13 +127,14 @@
         font-weight: 700;
         left: 0;
         letter-spacing: -0.022em;
+        margin: env(safe-area-inset-top) env(safe-area-inset-right)
+          env(safe-area-inset-bottom) env(safe-area-inset-left);
         padding: 0.375rem 1rem;
         white-space: nowrap;
       }
 
       .msrd main {
         align-items: center;
-        background-color: white;
         display: flex;
         flex-direction: column;
         flex-grow: 1;
@@ -198,8 +204,8 @@
 
       @media (prefers-color-scheme: dark) {
         .msrd {
-          color: white;
           background-color: var(--color-grey-0);
+          color: white;
         }
 
         .msrd a {
@@ -221,22 +227,24 @@
       }
     </style>
   </head>
-  <body class="msrd">
-    <header>
-      <div class="bar"></div>
-      <div class="logo">Measured Co.</div>
-    </header>
+  <body>
+    <div class="msrd">
+      <header>
+        <div class="bar"></div>
+        <div class="logo">Measured Co.</div>
+      </header>
 
-    <main>
-      <section>
-        <h1>We turn brands into Design Systems</h1>
-        <div class="u-spacing"></div>
-        <p>
-          <a class="u-mailto" href="mailto:hello@measured.co">
-            hello@measured.co
-          </a>
-        </p>
-      </section>
-    </main>
+      <main>
+        <section>
+          <h1>We turn brands into Design Systems</h1>
+          <div class="u-spacing"></div>
+          <p>
+            <a class="u-mailto" href="mailto:hello@measured.co">
+              hello@measured.co
+            </a>
+          </p>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
