--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,19 @@
     </style>
   </head>
   <body>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Measured Co.",
+      "url": "https://measured.co",
+      "logo": "https://measured.co/logo-schema-organization.svg",
+      "sameAs": [
+        "https://twitter.com/hellomeasuredco",
+        "https://github.com/measuredco"
+      ]
+    }
+    </script>
     <div class="wrapper msrd">
       <header>
         <div class="logotype">Measured Co.</div>
