--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         background-color: var(--color-background);
         display: flex;
         flex-direction: column;
-        height: 100%;
+        min-height: 100%;
         padding: env(safe-area-inset-top) env(safe-area-inset-right)
           env(safe-area-inset-bottom) env(safe-area-inset-left);
       }
