feat: point refinitiv link at forge

--- a/src/index.html
+++ b/src/index.html
@@ -277,7 +277,7 @@
               </a>
             </li>
             <li>
-              <a class="logo" href="https://www.refinitiv.com">
+              <a class="logo" href="https://forge.refinitiv.com">
                 <svg
                   aria-label="Refinitiv"
                   class="logo-svg"
