feat: update strapline

--- a/src/index.html
+++ b/src/index.html
@@ -246,7 +246,7 @@
       </header>
       <main>
         <section>
-          <h1 class="strapline">We turn brands into design systems.</h1>
+          <h1 class="strapline">Your thoughtful technology partner.</h1>
           <p class="call-to-action">
             <a href="mailto:hello@measured.co">hello@measured.co</a>
           </p>
