feat: make meta desc match visible strapline

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Measured Co.</title>
-    <meta name="description" content="We turn brands into design systems." />
+    <meta name="description" content="Your thoughtful technology partner." />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
