feat: change trading name
From "Measured Co." to "Measured".

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en-gb">
   <head>
     <meta charset="utf-8" />
-    <title>Measured Co.</title>
+    <title>Measured</title>
     <meta name="description" content="Your thoughtful technology partner." />
     <meta
       name="viewport"
@@ -231,7 +231,7 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "Measured Co.",
+        "name": "Measured",
         "url": "https://measured.co",
         "logo": "https://measured.co/logo-schema-organization.svg",
         "sameAs": [
@@ -242,7 +242,7 @@
     </script>
     <div class="wrapper">
       <header>
-        <div class="logotype">Measured Co.</div>
+        <div class="logotype">Measured</div>
       </header>
       <main>
         <section>
@@ -337,9 +337,9 @@
     </div>
     <footer>
       <small class="legal">
-        Measured Co. is the trading name of Measured Corporation Limited,
-        registered in England and Wales under company number 12932902, at 86–90
-        Paul Street, London, EC2A 4NE.
+        Measured is the trading name of Measured Corporation Limited, registered
+        in England and Wales under company number 12932902, at 86–90 Paul
+        Street, London, EC2A 4NE.
       </small>
     </footer>
   </body>
