feat: restore bt logo

--- a/src/index.html
+++ b/src/index.html
@@ -253,6 +253,22 @@
           </p>
           <ul class="logos">
             <li>
+              <a class="logo" href="https://www.bt.com">
+                <svg
+                  aria-label="BT"
+                  class="logo-svg"
+                  role="img"
+                  viewBox="0 0 522 522"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M273.57 171.89h129.87v38.07h-43.55v139.26h-42.77V209.96h-43.55v-38.07zm-12.78 317.64c-126.22 0-228.71-102.49-228.71-228.71 0-126.22 102.49-228.71 228.71-228.71 126.22 0 228.72 102.49 228.72 228.71 0 126.22-102.49 228.71-228.72 228.71m0 32.07c143.95 0 260.79-116.83 260.79-260.79C521.58 116.85 404.75.03 260.79.03 116.84.03 0 116.86 0 260.82 0 404.78 116.84 521.6 260.79 521.6m-44.07-226.62c0-11.21-7.04-18.78-19.04-18.78h-28.69v37.03h28.69c12 .01 19.04-7.56 19.04-18.25m-5.21-71.19c0-9.39-6-15.91-16.17-15.91H169v32.34h26.34c10.17-.01 16.17-6.52 16.17-16.43m48.5 73.28c0 33.64-23.73 52.16-57.63 52.16H126.8V171.89h70.63c34.16 0 57.37 17.47 57.37 49.55 0 14.6-6.52 27.64-16.95 35.47 11.99 7.04 22.16 20.6 22.16 40.16"
+                    fill="currentColor"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li>
               <a class="logo" href="https://www.hilton.com">
                 <svg
                   aria-label="Hilton"
