feat: explicitly mark the homepage canoncial
Fix "Duplicate without user-selected canonical" error from Google
Search Console.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
+    <link rel="canonical" href="https://measured.co" />
     <link rel="icon" href="favicon.png" type="image/png" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="system.css" />
