feat: add plausible analytics snippet

--- a/src/index.html
+++ b/src/index.html
@@ -226,6 +226,11 @@
         }
       }
     </style>
+    <script
+      defer
+      data-domain="measured.co"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
   </head>
   <body class="msrd">
     <script type="application/ld+json">
