feat: update logos

--- a/src/index.html
+++ b/src/index.html
@@ -249,7 +249,9 @@
     </script>
     <div class="wrapper">
       <header>
-        <div class="logotype">Measured</div>
+        <div class="logotype">
+          <img alt="Measured" height="21" src="logotype.svg" />
+        </div>
       </header>
       <main>
         <section>
