feat: point refinitiv link at main site
Forge has 404s on their home promos, so presume not being particularly well-maintained right now.

--- a/src/index.html
+++ b/src/index.html
@@ -324,7 +324,7 @@
               </a>
             </li>
             <li>
-              <a class="logo" href="https://forge.refinitiv.com">
+              <a class="logo" href="https://www.refinitiv.com">
                 <svg
                   aria-label="Refinitiv"
                   class="logo-svg"
