feat: add social image

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,11 @@
       http-equiv="delegate-ch"
       content="sec-ch-width https://res.cloudinary.com; sec-ch-dpr https://res.cloudinary.com; sec-ch-viewport-width https://res.cloudinary.com;"
     />
+    <meta property="og:image" content="https://measured.co/social.png" />
+    <meta name="image" content="https://measured.co/social.png" />
+    <meta itemprop="image" content="https://measured.co/social.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://measured.co/social.png" />
     <link rel="canonical" href="https://measured.co" />
     <link rel="icon" href="favicon.png" type="image/png" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
