feat: lazy load screenshots

--- a/src/index.html
+++ b/src/index.html
@@ -325,6 +325,7 @@
                 <img
                   alt=""
                   height="450"
+                  loading="lazy"
                   src="https://res.cloudinary.com/measuredco/dpr_auto,f_auto,q_auto,w_auto/site/Screenshot-BT-01_jpqlkt.tiff"
                   sizes="100vw"
                   width="800"
@@ -348,6 +349,7 @@
                 <img
                   alt=""
                   height="450"
+                  loading="lazy"
                   src="https://res.cloudinary.com/measuredco/dpr_auto,f_auto,q_auto,w_auto/site/Screenshot-Hilton-03_y28mga.tiff"
                   sizes="100vw"
                   width="800"
@@ -371,6 +373,7 @@
                 <img
                   alt=""
                   height="450"
+                  loading="lazy"
                   src="https://res.cloudinary.com/measuredco/dpr_auto,f_auto,q_auto,w_auto/site/Screenshot-Hubble-01_utt2ie.tiff"
                   sizes="100vw"
                   width="800"
