feat: update strapline

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Measured</title>
     <meta
       name="description"
-      content="Your thoughtful web technology partner."
+      content="Your thoughtful technology partner. Expert technology consultancy and full‑stack product engineering for scale‑ups and enterprises."
     />
     <meta
       name="viewport"
@@ -102,7 +102,11 @@
         <div class="msrd-Section-inner">
           <div class="msrd-Hero">
             <p class="msrd-Hero-strapline">
-              Your thoughtful web technology partner.
+              Your thoughtful technology partner
+            </p>
+            <p class="msrd-Hero-description">
+              Expert technology consultancy and full‑stack product engineering
+              for scale‑ups and&nbsp;enterprises.
             </p>
             <p class="msrd-Hero-callToAction">
               <a class="msrd-Hero-callToActionLink" href="#contact"
